core/unpackaged/main/default/objects/CampaignMember/fields/ZVC__Is_Panelist__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Is_Panelist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Panelist</label>
    <type>Checkbox</type>
</CustomField>