core/unpackaged/main/default/objects/CampaignMember/fields/ZVC__Is_Registrant__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Is_Registrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Registrant</label>
    <type>Checkbox</type>
</CustomField>