core/unpackaged/main/default/objects/CampaignMember/fields/ZVC__Join_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Join_Time__c</fullName>
    <label>Webinar Join Time</label>
    <type>DateTime</type>
</CustomField>