core/unpackaged/main/default/objects/CampaignMember/fields/ZVC__Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Leave_Time__c</fullName>
    <label>Webinar Leave Time</label>
    <type>DateTime</type>
</CustomField>