core/unpackaged/main/default/objects/CampaignMember/fields/ZVC__Zoom_Webinar_Registrant__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Webinar_Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Webinar Registrant</label>
    <referenceTo>ZVC__Zoom_Webinar_Registrant__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>